# datahog

./: .gitignore  ARCHITECTURE.md  Cargo.toml  INSTALL.md  README.md  WIP.md  devbox.json
.cargo/: config.toml
.zed/: settings.json
backend/: .gitignore  Cargo.toml  README.md
backend/src/: main.rs  storage.rs
backend/src/storage/: disk.rs
datahog/: CLAUDE.md  Cargo.toml  README.md
datahog/src/: impls.rs  lib.rs  objects.rs  storage.rs  structs.rs  views.rs  worldview.rs
datahog/src/impls/: edge.rs  mod.rs  node.rs
datahog/src/storage/: dir_trait.rs  disk.rs  imap.rs  mod.rs
frontend/: CLAUDE.md  README.md  angular.json  package-lock.json  package.json
frontend/src/: main.ts  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.ts  data-hog.spec.ts  data-hog.ts  data.service.ts
frontend/src/app/board-view/: board-view.component.ts
frontend/src/app/network-graph/: network-graph.component.scss
frontend/src/app/node-editor/: node-editor.component.html
frontend/src/app/over-view/: over-view.component.html  over-view.component.ts
frontend/src/app/view/basic/: basic.html  basic.ts  tiptap-editor.html  tiptap-editor.scss  tiptap-editor.ts
frontend/src/app/view/basic/tip-tap/: tiptap-editor.scss  tiptap-editor.ts
frontend/src/app/view/editorjs/: editorjs.component.html  editorjs.component.scss  editorjs.component.ts
frontend/src/app/view/markdown/: markdown.component.html  markdown.component.scss  markdown.component.ts
frontend/src/app/view/node/: node.component.html  node.component.scss  node.component.ts
frontend/src/app/view/node_md/: nodemd.component.html  nodemd.component.scss  nodemd.component.ts
frontend/src/app/view/search/: search.component.html  search.component.scss  search.component.ts
frontend/src/app/view/tiptap/: tiptap.component.html  tiptap.component.scss  tiptap.component.ts
frontend/src/lib/keyboard/: keyboard.component.html  keyboard.component.scss  keyboard.component.ts
frontend/src/lib/label-link/: index.ts  label-link.styles.scss  label-link.tool.ts
md-editor/: CLAUDE.md  DONE.md  PLAN.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vite.config.js
md-editor/examples/: index.html  phase1.html  phase2.html  styles.css
md-editor/src/: index.ts  md-editor.css
md-editor/src/core/: BlockTree.ts  MarkdownEditor.ts
md-editor/src/plugins/blocks/: HeadingBlock.ts  OrderedListBlock.ts  ParagraphBlock.ts  UnorderedListBlock.ts  index.ts
md-editor/src/plugins/inlines/: index.ts
md-editor/src/types/: Block.ts  BlockPlugin.ts  EditorAPI.ts  EditorConfig.ts  EditorState.ts  InlinePlugin.ts  index.ts
md-editor/src/utils/: constants.ts  domUtils.ts
npm-wasm/: Cargo.toml  README.md  watch_build.sh
npm-wasm/src/: lib.rs
old.frontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
old.frontend/src/: index.html  styles.scss
old.frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
old.frontend/src/app/network-graph/: network-graph.component.html  network-graph.component.ts
old.frontend/src/app/node-editor/: node-editor.component.ts
src/: main.rs  storage.rs  structs.rs
src/storage/: disk.rs  imap.rs
