[package]
name = "datahog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = { version = "1.10.1", features = ["serde"] }
flarch = "0.9.2"
flmacro = "0.9.2"
num-bigfloat = { version = "1.7.2", features = ["rand", "serde"] }
num-bigint = { version = "0.4.6", features = ["rand", "serde"] }
rand = { version = "0.9.1", features = ["serde"] }
serde = "1.0.219"
sha2 = "0.10.9"
tokio = {version = "1.45.0", features = ["full"] }
