[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datahog = { path = "../datahog" }

anyhow = "1"
hex = "0.4"
log = "0.4"
markdown-ppp = "2.7.1"
primitive-types = {version="0.13", features = ["serde"]}
rand = "0.8"
rocket = {version="0.5", features=["serde_json", "json"]}
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sled = "0.34"
tempfile = "3"
tracing = "0.1.41"
